k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sse-demo
  labels:
    name: sse-demo
